# portfolio

./: .gitignore  Cargo.toml  README copy.md  README.md  Trunk.toml  index.html  tailwind.config.js
app/: Cargo.toml  index.html
app/src/: blog_page.rs  clone_on_capture_page.rs  full_stack_rust_iac.rs  main.rs  managed_sccache_dist.rs  nav.rs  projects_page.rs  root_page.rs  root_route.rs  root_router_switch.rs  rust_frontend_page.rs
src/: app.rs  clone_on_capture_page.rs  code_block.rs  full_stack_rust_iac.rs  main.rs  managed_sccache_dist.rs  nav.rs  projects_list.rs  projects_page.rs  root.rs  root_page.rs  root_router_switch.rs  routes.rs  rust_frontend_page.rs
styles/: styles.scss
